adjust close button and add minimize button

--- a/MyfirstApp/DentalClinic.csproj
+++ b/MyfirstApp/DentalClinic.csproj
@@ -17,6 +17,7 @@
     <None Remove="images\instagram.png" />
     <None Remove="images\linkedin.png" />
     <None Remove="images\logo_dentdoc.png" />
+    <None Remove="images\minimize.png" />
     <None Remove="images\password.png" />
   </ItemGroup>
 
@@ -45,6 +46,9 @@
     </Resource>
     <Resource Include="images\linkedin.png" />
     <Resource Include="images\logo_dentdoc.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="images\minimize.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="images\password.png" />
